fix gallery spacing

--- a/resources/styles/_gutenberg.scss
+++ b/resources/styles/_gutenberg.scss
@@ -13,6 +13,8 @@
 .wp-block-image {
   margin-top: 0 !important;
   margin-top: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
   img {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
@@ -22,6 +24,7 @@
 .wp-block-gallery {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
+  gap: var(--gallery-block--gutter-size);
 }
 
 .wp-block-post-excerpt__excerpt {
